    Bugs fixed
    ----------
	Bug #21521 # Symbols not allowed in column/table names.    
    Bug #21874 MySqlException should derive from DbException     
    
    Other changes
    -------------
    Implemented simple local transactions
    Added overloaded methods in MySqlDataReader for getting a column value right from column name
    Replaced use of .NET 2.0 compression code with open source zlib library
    Fixed compression
    Fixed some problems with GetSchema and the Indexes and IndexColumns collections
    Fixed shared memory connections
    Implemented command canceling for MySQL 5.0.0 and higher
    Fixed problem with executing a Fill after a FillSchema
    Implemented CommandTimeout for non-batch queries
    
Version 5.0.0.0 (Alpha)

    Bugs fixed
    ----------
    Bug #6214  	CommandText: Question mark in comment line is being parsed as a parameter [fixed]

    Other changes
    -------------
    Implemented Usage Advisor
    Added Async query methods
    Reimplemented PacketReader/PacketWriter support into MySqlStream class
    Added internal implemention of SHA1 so we don't have to distribute the OpenNetCF on mobile devices    	
    Added usage advisor warnings for requesting column values by the wrong type
    Reworked connection string classes to be simpler and faster
    Added procedure metadata caching
    Added perfmon hooks for stored procedure cache hits and misses    	
    Implemented MySqlConnectionBuilder class
    Implemented MySqlClientFactory class
    Implemented classes and interfaces for ADO.Net 2.0 support
    Replaced use of ICSharpCode with .NET 2.0 internal deflate support
    Refactored test suite to test all protocols in a single pass
    Completely refactored how column values are handled to avoid boxing in some cases
    	
Version 1.0.8  (not yet released)

    Other changes
    -------------
    Implemented a stored procedure cache
    Changed how stored procedure metadata is retrieved to allow users without select privs